yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-api
  namespace: currency-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: currency-api
  template:
    metadata:
      labels:
        app: currency-api
    spec:
      containers:
        - name: currency-api
          image: 9rock/currency-api:production-v1
          imagePullPolicy: Always
          ports:
            - containerPort: 2050
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
