yaml/ingress-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service-nodeport
  namespace: currency-api
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app.kubernetes.io/name: currency-api
