yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-api-service
  namespace: currency-api
spec:
  type: ClusterIP
  selector:
    app: currency-api
  ports:
    - name: http
      port: 2050
      targetPort: 2050
