yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: currency-api-ingress
  namespace: currency-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - currency.9rock.in
      secretName: currency-api-tls
  rules:
    - host: currency.9rock.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: currency-api-service
                port:
                  number: 2050
